# extstore

./: CMakeLists.txt  libextstore.spec-in.cmake  libextstore.spec-in.meson  meson.build
extstore/: CMakeLists.txt
extstore/crud_cache/: extstore_crud_cache.c  objstore_cmd.c
extstore/dasi/: CMakeLists.txt  HOWTO.md  dasi.yml  extstore_dasi.c  kvsns.ini  schema  test_dasi.c
extstore/motr/: extstore_motr.c  m0store_cp_from.c  m0store_cp_from_bulk.c  m0store_cp_to.c  m0store_cp_to_bulk.c  meson.build
extstore/posix_store/: extstore_posix.c
extstore/rados/: extstore_rados.c
include/iosea/: extstore.h
